Cleaning firts day of data with correct records for each hour

--- a/Clean data, first days of January.ipynb
+++ b/Clean data, first days of January.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a7be6117",
+   "id": "2f6572bf",
    "metadata": {},
    "source": [
     "### Clean data for NAM y RAP model for the first days"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "1cd87a55",
+   "execution_count": 24,
+   "id": "38ce4572",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "bec16c21",
+   "execution_count": 25,
+   "id": "fbb96daa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "3b54dcab",
+   "execution_count": 26,
+   "id": "ee7b49b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "jan_04_NAM_file = 'comparision data/Comparación Enero/04-Enero-2021-NAM'"
+    "study_name = '04-Enero-2021-NAM'\n",
+    "jan_04_NAM_file = f'comparision data/Comparación Enero/{study_name}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "2c78a2e5",
+   "execution_count": 27,
+   "id": "f4924c57",
    "metadata": {
     "scrolled": true
    },
@@ -149,7 +150,7 @@
        "10     733.11      1146.196858"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,8 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "867cb14a",
+   "execution_count": 28,
+   "id": "0c495345",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +227,7 @@
        "10     733.11      1146.196858"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,100 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "57ecf888",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "comparision = consistent_data.to_csv('comparision data/Comparación Enero/04-Enero-2021-NAM.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49058a76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "real = comparision['real_data']\n",
-    "real"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71ba21d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "forecasted = comparision['forecasted_data']\n",
-    "forecasted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9265ba8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"MSE:\"+str(mean_squared_error(forecasted, real)))\n",
-    "print(\"RMSE:\"+str(np.sqrt(mean_squared_error(forecasted, real))))\n",
-    "print(\"MSLE:\"+str(mean_squared_log_error(forecasted, real)))\n",
-    "print(\"RMSLE:\"+str(np.sqrt(mean_squared_log_error(forecasted, real))))\n",
-    "print(\"MAE:\"+str(mean_absolute_error(forecasted, real)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "459a378c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MSE = mean_squared_error(forecasted, real)\n",
-    "RMSE = np.sqrt(mean_squared_error(forecasted, real))\n",
-    "MSLE = mean_squared_log_error(forecasted, real)\n",
-    "RMSLE = np.sqrt(mean_squared_log_error(forecasted, real))\n",
-    "MAE = mean_absolute_error(forecasted, real)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccd7e69c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metrics_obj = {'MSE': [MSE], 'RMSE':[RMSE], 'MSLE':[MSLE], 'RMSLE':[RMSLE], 'MAE':[MAE]}\n",
-    "metrics_df = pd.DataFrame(metrics_obj)\n",
-    "metrics_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa86dbb7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metrics_df.to_csv(metrics_data, index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "bba832f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jan_05_NAM_file = 'comparision data/Comparación Enero/05-Enero-2021-NAM'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "750e1709",
+   "execution_count": 34,
+   "id": "78e91681",
    "metadata": {},
    "outputs": [
     {
@@ -361,59 +270,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1851.77</td>\n",
-       "      <td>2121.628208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>14834.23</td>\n",
-       "      <td>19342.845041</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>23633.56</td>\n",
-       "      <td>31854.273902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>29504.89</td>\n",
-       "      <td>40244.308958</td>\n",
+       "      <td>15694.55</td>\n",
+       "      <td>19482.849001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>33621.44</td>\n",
-       "      <td>45027.390034</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>34818.67</td>\n",
-       "      <td>46638.762029</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>32420.78</td>\n",
-       "      <td>44576.036156</td>\n",
+       "      <td>34858.23</td>\n",
+       "      <td>45301.797581</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>28274.22</td>\n",
-       "      <td>38344.304734</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>21071.66</td>\n",
-       "      <td>29412.840570</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>6730.77</td>\n",
-       "      <td>16988.309337</td>\n",
+       "      <td>27938.45</td>\n",
+       "      <td>38468.596208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>913.67</td>\n",
-       "      <td>1209.750860</td>\n",
+       "      <td>733.11</td>\n",
+       "      <td>1146.196858</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -421,39 +295,136 @@
       ],
       "text/plain": [
        "    real_data  forecasted_data\n",
-       "0     1851.77      2121.628208\n",
-       "1    14834.23     19342.845041\n",
-       "2    23633.56     31854.273902\n",
-       "3    29504.89     40244.308958\n",
-       "4    33621.44     45027.390034\n",
-       "5    34818.67     46638.762029\n",
-       "6    32420.78     44576.036156\n",
-       "7    28274.22     38344.304734\n",
-       "8    21071.66     29412.840570\n",
-       "9     6730.77     16988.309337\n",
-       "10     913.67      1209.750860"
+       "1    15694.55     19482.849001\n",
+       "4    34858.23     45301.797581\n",
+       "7    27938.45     38468.596208\n",
+       "10     733.11      1146.196858"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(jan_05_NAM_file)\n",
-    "df"
+    "comparision = consistent_data.to_csv(f'comparision data/Comparación Enero/{study_name}', index=False)\n",
+    "consistent_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b8c62a38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "real = consistent_data['real_data']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "88bc110d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecasted = consistent_data['forecasted_data']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "49e4bfd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MSE = mean_squared_error(forecasted, real)\n",
+    "RMSE = np.sqrt(mean_squared_error(forecasted, real))\n",
+    "MSLE = mean_squared_log_error(forecasted, real)\n",
+    "RMSLE = np.sqrt(mean_squared_log_error(forecasted, real))\n",
+    "MAE = mean_absolute_error(forecasted, real)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "f560380b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MSE</th>\n",
+       "      <th>RMSE</th>\n",
+       "      <th>MSLE</th>\n",
+       "      <th>RMSLE</th>\n",
+       "      <th>MAE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>58618483.26</td>\n",
+       "      <td>7656.27</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>6293.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           MSE     RMSE  MSLE  RMSLE      MAE\n",
+       "0  58618483.26  7656.27   0.1   0.32  6293.77"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics_obj = {'MSE': [MSE], 'RMSE':[RMSE], 'MSLE':[MSLE], 'RMSLE':[RMSLE], 'MAE':[MAE]}\n",
+    "metrics_df = pd.DataFrame(metrics_obj)\n",
+    "metrics_df.round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "125b0267",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_df.to_csv(f'comparision data/Comparación Enero/{study_name}-Metrics', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07b9ed5b",
+   "id": "34d0b732",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "consistent_data = df.drop(index_to_drop)\n",
-    "consistent_data"
-   ]
+   "source": []
   }
  ],
  "metadata": {
