Data cleaned for NAM model January 4 to 17

--- a/Clean data, first days of January.ipynb
+++ b/Clean data, first days of January.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2f6572bf",
+   "id": "ca19d7e4",
    "metadata": {},
    "source": [
     "### Clean data for NAM y RAP model for the first days"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "38ce4572",
+   "id": "009f1d01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "fbb96daa",
+   "id": "d1e83635",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,19 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "ee7b49b7",
+   "execution_count": 154,
+   "id": "87b380a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "study_name = '04-Enero-2021-NAM'\n",
-    "jan_04_NAM_file = f'comparision data/Comparación Enero/{study_name}'"
+    "study_name = '04-Enero-2021-RAP'\n",
+    "file_ = f'comparision data/Comparación Enero/{study_name}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "f4924c57",
+   "execution_count": 155,
+   "id": "bb43a408",
    "metadata": {
     "scrolled": true
    },
@@ -78,58 +78,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1862.33</td>\n",
-       "      <td>2209.472598</td>\n",
+       "      <td>2885.11</td>\n",
+       "      <td>1608.920384</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>15694.55</td>\n",
-       "      <td>19482.849001</td>\n",
+       "      <td>12226.00</td>\n",
+       "      <td>18230.344461</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>25180.89</td>\n",
-       "      <td>31966.394019</td>\n",
+       "      <td>10057.67</td>\n",
+       "      <td>20323.955032</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>31500.77</td>\n",
-       "      <td>40289.373045</td>\n",
+       "      <td>29200.33</td>\n",
+       "      <td>26985.094211</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>34858.23</td>\n",
-       "      <td>45301.797581</td>\n",
+       "      <td>32800.78</td>\n",
+       "      <td>42806.451548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>34439.78</td>\n",
-       "      <td>46901.165142</td>\n",
+       "      <td>34168.33</td>\n",
+       "      <td>44401.548263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>31555.45</td>\n",
-       "      <td>44779.017095</td>\n",
+       "      <td>33048.88</td>\n",
+       "      <td>36621.012497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>27938.45</td>\n",
-       "      <td>38468.596208</td>\n",
+       "      <td>27696.11</td>\n",
+       "      <td>36714.473944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>21174.89</td>\n",
-       "      <td>29288.921374</td>\n",
+       "      <td>20801.34</td>\n",
+       "      <td>29885.698197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>6826.89</td>\n",
-       "      <td>16902.794493</td>\n",
+       "      <td>11574.11</td>\n",
+       "      <td>18189.806438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>733.11</td>\n",
-       "      <td>1146.196858</td>\n",
+       "      <td>637.45</td>\n",
+       "      <td>2936.619773</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -137,20 +137,20 @@
       ],
       "text/plain": [
        "    real_data  forecasted_data\n",
-       "0     1862.33      2209.472598\n",
-       "1    15694.55     19482.849001\n",
-       "2    25180.89     31966.394019\n",
-       "3    31500.77     40289.373045\n",
-       "4    34858.23     45301.797581\n",
-       "5    34439.78     46901.165142\n",
-       "6    31555.45     44779.017095\n",
-       "7    27938.45     38468.596208\n",
-       "8    21174.89     29288.921374\n",
-       "9     6826.89     16902.794493\n",
-       "10     733.11      1146.196858"
+       "0     2885.11      1608.920384\n",
+       "1    12226.00     18230.344461\n",
+       "2    10057.67     20323.955032\n",
+       "3    29200.33     26985.094211\n",
+       "4    32800.78     42806.451548\n",
+       "5    34168.33     44401.548263\n",
+       "6    33048.88     36621.012497\n",
+       "7    27696.11     36714.473944\n",
+       "8    20801.34     29885.698197\n",
+       "9    11574.11     18189.806438\n",
+       "10     637.45      2936.619773"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,14 +159,14 @@
     "# NAM model only retreives 10 records per day from 8:00 AM to 18:00 PM so, \n",
     "# we clean the data to be consistent with GFS model\n",
     "\n",
-    "df = pd.read_csv(jan_04_NAM_file)\n",
+    "df = pd.read_csv(file_)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "0c495345",
+   "execution_count": 156,
+   "id": "3e3e38bc",
    "metadata": {},
    "outputs": [
     {
@@ -197,23 +197,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>15694.55</td>\n",
-       "      <td>19482.849001</td>\n",
+       "      <td>12226.00</td>\n",
+       "      <td>18230.344461</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>34858.23</td>\n",
-       "      <td>45301.797581</td>\n",
+       "      <td>32800.78</td>\n",
+       "      <td>42806.451548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>27938.45</td>\n",
-       "      <td>38468.596208</td>\n",
+       "      <td>27696.11</td>\n",
+       "      <td>36714.473944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>733.11</td>\n",
-       "      <td>1146.196858</td>\n",
+       "      <td>637.45</td>\n",
+       "      <td>2936.619773</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -221,13 +221,13 @@
       ],
       "text/plain": [
        "    real_data  forecasted_data\n",
-       "1    15694.55     19482.849001\n",
-       "4    34858.23     45301.797581\n",
-       "7    27938.45     38468.596208\n",
-       "10     733.11      1146.196858"
+       "1    12226.00     18230.344461\n",
+       "4    32800.78     42806.451548\n",
+       "7    27696.11     36714.473944\n",
+       "10     637.45      2936.619773"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,82 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "78e91681",
+   "execution_count": 157,
+   "id": "fb7ac6ec",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>real_data</th>\n",
-       "      <th>forecasted_data</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>15694.55</td>\n",
-       "      <td>19482.849001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>34858.23</td>\n",
-       "      <td>45301.797581</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>27938.45</td>\n",
-       "      <td>38468.596208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>733.11</td>\n",
-       "      <td>1146.196858</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    real_data  forecasted_data\n",
-       "1    15694.55     19482.849001\n",
-       "4    34858.23     45301.797581\n",
-       "7    27938.45     38468.596208\n",
-       "10     733.11      1146.196858"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "comparision = consistent_data.to_csv(f'comparision data/Comparación Enero/{study_name}', index=False)\n",
-    "consistent_data"
+    "consistent_data.to_csv(f'comparision data/Comparación Enero/{study_name}', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "b8c62a38",
+   "execution_count": 158,
+   "id": "79ca8fe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,8 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "88bc110d",
+   "execution_count": 159,
+   "id": "61edb720",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,8 +269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "49e4bfd7",
+   "execution_count": 160,
+   "id": "07db7184",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,8 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "f560380b",
+   "execution_count": 161,
+   "id": "f07db1e8",
    "metadata": {},
    "outputs": [
     {
@@ -382,11 +318,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>58618483.26</td>\n",
-       "      <td>7656.27</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>6293.77</td>\n",
+       "      <td>55695671.35</td>\n",
+       "      <td>7462.95</td>\n",
+       "      <td>0.66</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>6831.89</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -394,10 +330,10 @@
       ],
       "text/plain": [
        "           MSE     RMSE  MSLE  RMSLE      MAE\n",
-       "0  58618483.26  7656.27   0.1   0.32  6293.77"
+       "0  55695671.35  7462.95  0.66   0.81  6831.89"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,8 +346,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "125b0267",
+   "execution_count": 162,
+   "id": "5dfcea8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34d0b732",
+   "id": "a5be0267",
    "metadata": {},
    "outputs": [],
    "source": []
